# Subprocess

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh
include/: Process.hpp
src/: Process.cpp  getCommand.cpp  getStatus.cpp  getStream.cpp  isRedirecting.cpp  isRunning.cpp  onRead.cpp  onReceive.cpp  redirect.cpp  setCommand.cpp  setTimeout.cpp  setWorkingDir.cpp  start.cpp  toStdin.cpp  wait.cpp  writeStdin.cpp
src/common/: getCommand.cpp  getStatus.cpp  getStream.cpp  isRedirecting.cpp  onRead.cpp  process.cpp  redirect.cpp  setTimeout.cpp  setWorkingDir.cpp  writeStdin.cpp
src/linux/: isRunning.cpp  setCommand.cpp  start.cpp  wait.cpp  writeStdin.cpp
src/windows/: isRunning.cpp  setCommand.cpp  start.cpp  wait.cpp  writeStdin.cpp
tests/: CMakeLists.txt  test.sh
tests/src/: main.cpp
